# noteHider

./: .gitmodules  README.md  pubspec.yaml
android/app/: build.gradle
demo/: README.md  advanced_attack_simulation.dart  device_dna_explorer.dart  run_all_demos.dart  test_device_binding.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bloc_observer.dart  device_binding_demo.dart  homepage.dart  main.dart
lib/bloc/: auth_event.dart  auth_state.dart  tab_bloc.dart  tab_event.dart  tab_state.dart
lib/features/notes/: add_edit_notes_page.dart  add_notes_page.dart  notes_page.dart  secure_area_page.dart
lib/features/secure_area/: activity_tab_page.dart  files_tab_page.dart  secure_area_main_page.dart  security_tab_page.dart
lib/models/: file_models.dart  security_config.dart  security_profiles.dart
lib/services/: auto_wipe_service.dart  biometric_service.dart  crypto_ffi.dart  crypto_service.dart  decoy_system_service.dart  file_manager_service.dart  hardware_crypto_bridge.dart  location_service.dart  native_integrity_ffi.dart  security_config_service.dart  security_feature.dart  storage_service.dart  tamper_detection_service.dart  totp_service.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
src/: CMakeLists.txt  native_crypto.c  native_crypto.h  native_integrity.c  native_integrity.h
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+28 files in other folders)
